# pocs

acp-http-smoke-test/: Cargo.toml  README.md  run.sh
acp-http-smoke-test/src/: client.rs  server.rs
agent-dot-me/: .gitignore  README.md  package-lock.json  package.json
agent-dot-me/sources/: claude-summary.md  transcript.md
agent-dot-me/src/: agent-client-protocol.ts  enclave.ts  personas.ts  scenarios.ts  types.ts
agent-dot-me/src/cli/: run-all.ts  run-scenario.ts
agent-dot-me/src/server/: index.ts
agent-dot-me/web/: app.js  index.html  styles.css
agentic-content-payments/: README.md  package.json
agentic-content-payments/src/: mcp-server.ts  states.ts
mcp-sdks-programmatic-clients/: .gitignore  Cargo.toml  PLAN.md  README.md  rust-toolchain.toml
mcp-sdks-programmatic-clients/crates/mcp-client-core/: Cargo.toml
mcp-sdks-programmatic-clients/crates/mcp-client-core/src/: broker.rs  catalog.rs  code_mode.rs  discovery.rs  lib.rs  types.rs
mcp-sdks-programmatic-clients/crates/mcp-client-node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
mcp-sdks-programmatic-clients/crates/mcp-client-node/src/: lib.rs
mcp-sdks-programmatic-clients/typescript-sdk/: pnpm-lock.yaml
mcp-sdks-programmatic-clients/typescript-sdk/examples/augmentation-demo/: package.json  tsconfig.json
mcp-sdks-programmatic-clients/typescript-sdk/examples/augmentation-demo/src/: augmentation.ts  demo.ts
mcp-with-attribution/: Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  package-lock.json  package.json
mcp-with-attribution/extensions/: x402-mcp.config.yaml
mcp-with-attribution/public/: index.html
mcp-with-attribution/src/: frontend-server.ts  mcp-server.ts  web-server.ts
