[workspace]
resolver = "2"
members = [
    "crates/mcp-client-core",
    "crates/mcp-client-node",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["MCP SDK contributors"]

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
async-trait = "0.1"
tracing = "0.1"
parking_lot = "0.12"

# Search (BM25 retrieval)
bm25 = "2"

# Code mode — same crate goose's code_execution.rs uses in production
pctx_code_mode = "0.4"

# Node bindings (napi-rs v3)
napi = { version = "3", features = ["napi8", "async", "serde-json", "tokio_rt"] }
napi-derive = "3"
napi-build = "2"
